Formatted every document, may be final commit!

--- a/masonry.html
+++ b/masonry.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="masonry.css">
-        <link rel="stylesheet" href="nav.css">
-        <link rel="stylesheet" href="footer.css">
-        <title>Masonry</title>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="masonry.css">
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="footer.css">
+    <title>Masonry</title>
+</head>
+
 <body>
     <nav>
-        <a href="index.html"><div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo"><p>Monty Tech Greenhouse</p></div></a>
+        <a href="index.html">
+            <div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo">
+                <p>Monty Tech Greenhouse</p>
+            </div>
+        </a>
         <div class="pages">
             <a href="plants.html">Plants</a>
             <a href="masonry.html">Statues</a>
@@ -25,57 +31,57 @@
     </div>
     <h1>Masonry Structures</h1>
     <div class="masonryProducts">
-    <div class="masonryProduct">
-        <div class="masonryImageContainer">
-            <img src="images/masonry/bench.webp" alt="bench statue" class="masonryImage">
+        <div class="masonryProduct">
+            <div class="masonryImageContainer">
+                <img src="images/masonry/bench.webp" alt="bench statue" class="masonryImage">
+            </div>
+            <div class="text">
+                <p><b>Bench</b><br>$50.00</p>
+            </div>
         </div>
-        <div class="text">
-            <p><b>Bench</b><br>$50.00</p>
+        <div class="masonryProduct">
+            <div class="masonryImageContainer">
+                <img src="images/masonry/lighthouse.webp" alt="lighthouse statue" class="masonryImage">
+            </div>
+            <div class="text">
+                <p><b>Lighthouse</b><br>$25.00</p>
+            </div>
         </div>
-    </div>
-    <div class="masonryProduct">
-        <div class="masonryImageContainer">
-            <img src="images/masonry/lighthouse.webp" alt="lighthouse statue" class="masonryImage">
+        <div class="masonryProduct">
+            <div class="masonryImageContainer">
+                <img src="images/masonry/gnome.webp" alt="gnome statue" class="masonryImage">
+            </div>
+            <div class="text">
+                <p><b>Gnome Statue</b><br>$5.00</p>
+            </div>
         </div>
-        <div class="text">
-            <p><b>Lighthouse</b><br>$25.00</p>
+        <div class="masonryProduct">
+            <div class="masonryImageContainer">
+                <img src="images/masonry/cat.webp" alt="cat statue" class="masonryImage">
+            </div>
+            <div class="text">
+                <p><b>Cat Statue</b><br>$5.00</p>
+            </div>
         </div>
-    </div>
-    <div class="masonryProduct">
-        <div class="masonryImageContainer">
-            <img src="images/masonry/gnome.webp" alt="gnome statue" class="masonryImage">
-        </div>
-        <div class="text">
-            <p><b>Gnome Statue</b><br>$5.00</p>
-        </div>
-    </div>
-    <div class="masonryProduct">
-        <div class="masonryImageContainer">
-            <img src="images/masonry/cat.webp" alt="cat statue" class="masonryImage">
-        </div>
-        <div class="text">
-            <p><b>Cat Statue</b><br>$5.00</p>
-        </div>
-    </div>
 
-    <div class="masonryProduct">
-        <div class="masonryImageContainer">
-            <img src="images/masonry/duck.webp" alt="duck statue" class="masonryImage">
+        <div class="masonryProduct">
+            <div class="masonryImageContainer">
+                <img src="images/masonry/duck.webp" alt="duck statue" class="masonryImage">
+            </div>
+            <div class="text">
+                <p><b>Duck Statue</b><br>$5.00</p>
+            </div>
         </div>
-        <div class="text">
-            <p><b>Duck Statue</b><br>$5.00</p>
-        </div>
-    </div>
 
-    <div class="masonryProduct">
-        <div class="masonryImageContainer">
-            <img src="images/masonry/pig.webp" alt="pig statue" class="masonryImage">
-        </div>
-        <div class="text">
-            <p><b>Pig Statue</b><br>$5.00</p>
+        <div class="masonryProduct">
+            <div class="masonryImageContainer">
+                <img src="images/masonry/pig.webp" alt="pig statue" class="masonryImage">
+            </div>
+            <div class="text">
+                <p><b>Pig Statue</b><br>$5.00</p>
+            </div>
         </div>
     </div>
-</div>
 
     <footer>
         <ul>
@@ -95,9 +101,11 @@
             <li>Fruits and Vegetables</li>
         </ul>
         <div class="MTLogo">
-            <img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo">
+            <img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png"
+                alt="monty tech logo">
         </div>
     </footer>
     <script src="nav.js"></script>
 </body>
+
 </html>
