--- a/plants.html
+++ b/plants.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="shopplants.css">
-        <link rel="stylesheet" href="nav.css">
-        <link rel="stylesheet" href="footer.css">
-        <title>Shop Plants</title>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="shopplants.css">
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="footer.css">
+    <title>Shop Plants</title>
+</head>
+
 <body>
     <nav>
-        <a href="index.html"><div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo"><p>Monty Tech Greenhouse</p></div></a>
+        <a href="index.html">
+            <div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo">
+                <p>Monty Tech Greenhouse</p>
+            </div>
+        </a>
         <div class="pages">
             <a href="plants.html">Plants</a>
             <a href="masonry.html">Statues</a>
@@ -23,106 +29,114 @@
         <a href="masonry.html">Statues</a>
         <a href="contact.html">Contact us</a>
     </div>
-        <div class="plantGrid">
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Capella Coral Pentuia</p>
-                <p class="plantInfo">Great flower to put in a hanging basket</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Yellow and Purple Calibrocha</p>
-                <p class="plantInfo">Represent Monty Tech with nature</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Neon Pink Calibrocha</p>
-                <p class="plantInfo">Can bloom from early spring to late summer</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">White Calibrocha</p>
-                <p class="plantInfo">A simple and clean white flower</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Coleus</p>
-                <p class="plantInfo">A herb during a spring, but turns into a flower in the late summer</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Cuphea</p>
-                <p class="plantInfo">Also known as "hummingbirds lunch"</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Amore</p>
-                <p class="plantInfo">Purple and yellow combined to make a pretty pattern</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Fuchisa</p>
-                <p class="plantInfo">Red as the bud grows, but when it blooms it shows its purple petals</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Starlight Starbright</p>
-                <p class="plantInfo">Like a night sky</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Bambooo</p>
-                <p class="plantInfo">Can grow over 1,000ft</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Blackberry and Cream Sufina</p>
-                <p class="plantInfo">Bright yellow with a cool color inside</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Bright Red Guranium</p>
-                <p class="plantInfo">Brimming and bold</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Yellow Petunia</p>
-                <p class="plantInfo">(Have not bloomed yet)</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">White Guranium</p>
-                <p class="plantInfo">Like a baby white Calibrocha</p>
-            </div>
-        </div>  
-        <div class="extraPlantInfo">
-            <div class="plantPortrait"></div>
-            <div class="info">
-                <h2>Plant Name</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            </div>
+    <div class="plantGrid">
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">Capella Coral Pentuia</p>
+            <p class="plantInfo">Great flower to put in a hanging basket</p>
         </div>
-        <footer>
-            <ul>
-                <li>Monty Tech Greenhouse</li>
-                <li>Montachusett Regional Vocational Technical School</li>
-                <li>1050 Westinister Street</li>
-                <li>Fitchburg, MA 01420</li>
-            </ul>
-            <ul>
-                <li>Contacts</li>
-                <li><a href="https://www.facebook.com/MontyTechBulldogs/">Facebook</a></li>
-                <li><a href="https://www.instagram.com/montytechbulldogs/?hl=en">Instagram</a></li>
-            </ul>
-            <ul>
-                <li>Shop</li>
-                <li><a href="/plants.html">Plants</a></li>
-                <li><a href="/masonry.html">Masonry</a></li>
-            </ul>
-            <div class="MTLogo">
-                <a href="https://www.montytech.net/"><img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo"></a>
-            </div>
-        </footer>
-        <script src="nav.js"></script>
-    </body>
-    </html>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">Yellow and Purple Calibrocha</p>
+            <p class="plantInfo">Represent Monty Tech with nature</p>
+        </div>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">Neon Pink Calibrocha</p>
+            <p class="plantInfo">Can bloom from early spring to late summer</p>
+        </div>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">White Calibrocha</p>
+            <p class="plantInfo">A simple and clean white flower</p>
+        </div>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">Coleus</p>
+            <p class="plantInfo">A herb during a spring, but turns into a flower in the late summer</p>
+        </div>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">Cuphea</p>
+            <p class="plantInfo">Also known as "hummingbirds lunch"</p>
+        </div>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">Amore</p>
+            <p class="plantInfo">Purple and yellow combined to make a pretty pattern</p>
+        </div>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">Fuchisa</p>
+            <p class="plantInfo">Red as the bud grows, but when it blooms it shows its purple petals</p>
+        </div>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">Starlight Starbright</p>
+            <p class="plantInfo">Like a night sky</p>
+        </div>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">Bambooo</p>
+            <p class="plantInfo">Can grow over 1,000ft</p>
+        </div>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">Blackberry and Cream Sufina</p>
+            <p class="plantInfo">Bright yellow with a cool color inside</p>
+        </div>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">Bright Red Guranium</p>
+            <p class="plantInfo">Brimming and bold</p>
+        </div>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">Yellow Petunia</p>
+            <p class="plantInfo">(Have not bloomed yet)</p>
+        </div>
+        <div class="plant">
+            <div class="plantImg"></div>
+            <p class="plantName">White Guranium</p>
+            <p class="plantInfo">Like a baby white Calibrocha</p>
+        </div>
+    </div>
+    <div class="extraPlantInfo">
+        <div class="plantPortrait"></div>
+        <div class="info">
+            <h2>Plant Name</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
+                software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+    </div>
+    <footer>
+        <ul>
+            <li>Monty Tech Greenhouse</li>
+            <li>Montachusett Regional Vocational Technical School</li>
+            <li>1050 Westinister Street</li>
+            <li>Fitchburg, MA 01420</li>
+        </ul>
+        <ul>
+            <li>Contacts</li>
+            <li><a href="https://www.facebook.com/MontyTechBulldogs/">Facebook</a></li>
+            <li><a href="https://www.instagram.com/montytechbulldogs/?hl=en">Instagram</a></li>
+        </ul>
+        <ul>
+            <li>Shop</li>
+            <li><a href="/plants.html">Plants</a></li>
+            <li><a href="/masonry.html">Masonry</a></li>
+        </ul>
+        <div class="MTLogo">
+            <a href="https://www.montytech.net/"><img
+                    src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png"
+                    alt="monty tech logo"></a>
+        </div>
+    </footer>
+    <script src="nav.js"></script>
+</body>
+
+</html>
