--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,14 @@
     <link rel="stylesheet" href="contact.css">
     <title>Contact Us</title>
 </head>
+
 <body>
     <nav>
-        <a href="index.html"><div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo"><p>Monty Tech Greenhouse</p></div></a>
+        <a href="index.html">
+            <div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo">
+                <p>Monty Tech Greenhouse</p>
+            </div>
+        </a>
         <div class="pages">
             <a href="plants.html">Plants</a>
             <a href="masonry.html">Statues</a>
@@ -38,8 +44,12 @@
                 <div class="contact">
                     <h3 style="color:rgb(0, 0, 0);">Find us on:</h3>
                     <div class="socialMediaList">
-                        <a href="https://www.instagram.com/montytechbulldogs/?hl=en"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="instagram icon"></a>
-                        <a href="https://www.facebook.com/MontyTechBulldogs/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/2021_Facebook_icon.svg/2048px-2021_Facebook_icon.svg.png" alt="facebook icon"></a>
+                        <a href="https://www.instagram.com/montytechbulldogs/?hl=en"><img
+                                src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"
+                                alt="instagram icon"></a>
+                        <a href="https://www.facebook.com/MontyTechBulldogs/"><img
+                                src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/2021_Facebook_icon.svg/2048px-2021_Facebook_icon.svg.png"
+                                alt="facebook icon"></a>
                     </div>
                 </div>
             </div>
@@ -64,9 +74,12 @@
             <li><a href="/masonry.html">Masonry</a></li>
         </ul>
         <div class="MTLogo">
-            <a href="https://www.montytech.net/"><img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo"></a>
+            <a href="https://www.montytech.net/"><img
+                    src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png"
+                    alt="monty tech logo"></a>
         </div>
     </footer>
     <script src="nav.js"></script>
 </body>
+
 </html>
