--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +10,14 @@
     <link rel="stylesheet" href="footer.css">
     <title>MT Greenhouse</title>
 </head>
+
 <body>
     <nav>
-        <a href="index.html"><div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo"><p>Monty Tech Greenhouse</p></div></a>
+        <a href="index.html">
+            <div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo">
+                <p>Monty Tech Greenhouse</p>
+            </div>
+        </a>
         <div class="pages">
             <a href="plants.html">Plants</a>
             <a href="masonry.html">Statues</a>
@@ -28,7 +34,7 @@
         <div class="info">
             <h1>A Place of Greenery</h1>
             <p>Come to the Monty Tech's greenhouse, where we have lots of beautiful plants and masonry statues. </p>
-           <a href="/plants.html" class="shopBtn">Shop Now</a>
+            <a href="/plants.html" class="shopBtn">Shop Now</a>
         </div>
     </div>
     <footer>
@@ -49,9 +55,12 @@
             <li><a href="/masonry.html">Masonry</a></li>
         </ul>
         <div class="MTLogo">
-            <a href="https://www.montytech.net/"><img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo"></a>
+            <a href="https://www.montytech.net/"><img
+                    src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png"
+                    alt="monty tech logo"></a>
         </div>
     </footer>
     <script src="nav.js"></script>
 </body>
+
 </html>
